# practice__fastapi_words__server

./: .Dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/database/: db_connection.py  work_with_db.py
app/helper_functions/: check_word.py  get_game_status_data.py  post_word.py
app/settings/: status_metadata.py
